@@ -1,5 +1,9 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* tests/test-left_justify.c: Cleanup.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* Makefile.gdb: Remove file.
 	* Makefile.in: Remove GDB auxiliary rule to create GDB scripts for
 	each test.
